not responsive design yet.background image is fixed

--- a/css/main.css
+++ b/css/main.css
@@ -1,67 +1,132 @@
+body {
+  font-family: Raleway, sans-serif;
+  font-size: 62.5%;
+  color: rgb(67, 67, 67);
+  animation: fadeIn 1s ease 0.1s both;
+}
 
+body {
+  display: block;
+  /* margin: 8px; */
+}
 body, html {
   width: 100%;
   height: 100%;
   padding: 0px;
   margin: 0px;
-  display: block;
-  font-family: sans-serif;
-}
+} 
 
-#menu{
+* {
+  box-sizing: border-box;
+}
+#menu {
+  width: 100%;
   position: absolute;
-  top:0;
   z-index: 3;
   text-align: center;
-  animation: fadeInDown .6s 0.5s ease both;
 }
+
+  #logo {
+    width: 235px;
+    height: 79px;
+    position: absolute;
+    left: 50%;
+    margin-left: -117.5px;
+    background: url(../images/logo.png) no-repeat;
+    background-size: 100%;
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+/* #nav {
+  display: none;
+  margin-top: 89px;
+} */
+
+#nav a {
+  /* -webkit-animation: slam .6s 0.5s ease both;  */
+  /* margin: 0 4% 0; */
+  display: inline;
+  font-size: 1.7em;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+} 
+
+a, a:link {
+  text-decoration: none;
+}
+
+a:active, a:link {
+  outline: none;
+}
+
+#header {
+  display: table;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-image: url("http://demo.qodeinteractive.com/bridge/wp-content/uploads/2014/03/full01.jpg");
+  z-index: 1;
+  width: 100%;
+  height: 500px;
+}
+
 #header h1 {
-  width:392px;
-  height:1006px;
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  animation: fadeInUp .6s .5s ease both;
+  /* -webkit-animation: fadeInUp .6s .5s ease both;
+  -moz-animation: fadeInUp .6s .5s ease both;
+  -ms-animation: fadeInUp .6s .5s ease both;
+  -o-animation: fadeInUp .6s .5s ease both;
+  animation: fadeInUp .6s .5s ease both; */
+}
+h1 {
+  color: #fff;
+  font-size: 7em;
+  font-weight: bold;
+  line-height: 0.8em;
 }
 
-.animateall * {
-transition-duration:  0.2s;
-transition-timing-function: ease-in-out;
+p, li, h1, h2, h3, h4, h5, h6 {
+  margin: 0px;
+  padding: 0px;
 }
 
-#header{
-  display: table;
-  z-index: 1;
-  background: url('http://demo.qodeinteractive.com/bridge/wp-content/uploads/2014/03/full01.jpg') no-repeat center;
+#header h1 span {
+  color: #363636;
+  font-size: 0.30em;
 }
 
-@media (max-width: 750px){
-#header {
-  position: absolute;
+#contentContainer{
+width: 100%;
+margin-top: 500px;
+background: #fff;
+position: relative;
+z-index: 2;
+-webkit-box-shadow: rgba(35,35,50,0.8) 0px 0px 11px -2px;
+-moz-box-shadow: rgba(35,35,50,0.8) 0px 0px 11px -2px;
+box-shadow: rgba(35,35,50,0.8) 0px 0px 11px -2px;
 }
 
-#menu{
+.animateWidth{
+ width:49%;
+ display: inline-block;
+}
+
+.workItem {
+  width:100%;
+  height:300px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.footer {
   width: 100%;
-  padding-top: 10px;
-  left: 0;
-  margin: 0;
-
+  padding:20px;
+  font-size: 1.7em;
+  text-align: center;
+  height: 400px;
+  background-color: #6d6d6d;
 }
-}
-
-@media (max-width: 450px){
-  h1{
-    line-height: 1.2em;
-    font-size:  3em;
-  }
-
-}
-
-@media (max-width:767px){
-  h1{
-    color:#FFF;
-    margin:0px;
-    padding: 0px;
-}
-}
-
